--- a/inventory/controllers.ini
+++ b/inventory/controllers.ini
@@ -1,5 +1,5 @@
 [controllers]
-CX8290 ansible_host=192.168.2.2 ansible_user=Administrator ansible_ssh_private_key_file=./ansible_keys/ansible_key
+CX8290 ansible_host=192.168.2.2 ansible_user=Administrator ansible_ssh_private_key_file=./files/ansible_key
 
 [controllers:vars]
 ansible_connection=ssh
