--- a/playbook/linux-tc3.yml
+++ b/playbook/linux-tc3.yml
@@ -48,6 +48,21 @@
         name: nftables
         enabled: no
 
+    - name: Write static network config for end0
+      ansible.builtin.copy:
+        dest: /etc/systemd/network/10-end0-static.network
+        owner: root
+        group: root
+        mode: "0644"
+        content: |
+          [Match]
+          Name=end0
+
+          [Network]
+          Address=192.168.2.101/24
+          Gateway=192.168.2.1
+          DNS=192.168.2.1 8.8.8.8
+
     - name: reboot and wait
       ansible.builtin.reboot:
         msg: "reboot after disabling firewall"
